--- a/sorter.html
+++ b/sorter.html
@@ -511,12 +511,6 @@
                 Science
               </span>
               <br>
-              <span style="background-color:red;color:white;font-size:15px;border-radius:10px;padding:5px 100px 5px 100px;text-align:center;">
-                <b>
-                  50% off
-                </b>
-              </span>
-              <br>
               <br>
               <img src="resources/book6(1).jpg" style="max-width: 70%; max-height: auto;">
               <br>
@@ -590,12 +584,6 @@
                 Science
               </span>
               <br>
-              <span style="background-color:red;color:white;font-size:15px;border-radius:10px;padding:5px 100px 5px 100px;text-align:center;">
-                <b>
-                  25% off
-                </b>
-              </span>
-              <br>
               <br>
               <img src="resources/book8(1).jpg" style="max-width: 70%; max-height: auto;">
               <br>
@@ -663,7 +651,7 @@
           <th class="Space" onclick="window.location.href='TBP.html';">
             <div class="card">
               <span class="genre">
-                Non-Fiction
+                Fiction
               </span>
               <span class="topic">
                 Uncertainty
@@ -696,6 +684,14 @@
           </th>
           <th class="Space" onclick="window.location.href='SE.html';">
             <div class="card">
+              <span class="genre">
+                Fiction
+              </span>
+              <span class="topic">
+                Space
+              </span>
+              <br>
+              <br>
               <img src="resources/book11(1).jpg" style="max-width: 70%; max-height: 50%;">
               <br>
               <span>
@@ -722,6 +718,14 @@
           </th>
           <th class="Space" onclick="window.location.href='BL.html';">
             <div class="card">
+              <span class="genre">
+                Fiction
+              </span>
+              <span class="topic">
+                Uncertainty
+              </span>
+              <br>
+              <br>
               <img src="resources/book12(1).jpg" style="max-width: 70%; max-height: 50%;">
               <br>
               <span>
@@ -750,6 +754,14 @@
         <tr class="booksRow">
           <th class="ShortStories" onclick="window.location.href='HUTS.html';">
             <div class="card">
+              <span class="genre">
+                Fiction
+              </span>
+              <span class="topic">
+                Short Stories
+              </span>
+              <br>
+              <br>
               <img src="resources/book13(1).jpg" style="max-width: 70%; max-height: 50%;">
               <br>
               <span>
@@ -776,6 +788,14 @@
           </th>
           <th class="ShortStories" onclick="window.location.href='TWE.html';">
             <div class="card">
+              <span class="genre">
+                Fiction
+              </span>
+              <span class="topic">
+                Short Stories
+              </span>
+              <br>
+              <br>
               <img src="resources/book14(1).jpg" style="max-width: 70%; max-height: 50%;">
               <br>
               <span>
@@ -802,6 +822,14 @@
           </th>
           <th class="Space" onclick="window.location.href='ROT.html';">
             <div class="card">
+              <span class="genre">
+                Fiction
+              </span>
+              <span class="topic">
+                Uncertainty
+              </span>
+              <br>
+              <br>
               <img src="resources/book15(1).jpg" style="max-width: 70%; max-height: 50%;">
               <br>
               <span>
@@ -830,11 +858,13 @@
         <tr class="booksRow">
           <th class="Space" onclick="window.location.href='BHS.html';">
             <div class="card">
-              <span style="background-color:red;color:white;font-size:15px;border-radius:10px;padding:5px 5% 5px 5%;text-align:center;">
-                <b>
-                  50% off
-                </b>
+              <span class="genre">
+                Fiction
               </span>
+              <span class="topic">
+                Space
+              </span>
+              <br>
               <br>
               <br>
               <img src="resources/book16(1).jpg" style="max-width: 70%; max-height: 50%;">
@@ -866,6 +896,14 @@
           </th>
           <th class="Space" onclick="window.location.href='G.html';">
             <div class="card">
+              <span class="genre">
+                Fiction
+              </span>
+              <span class="topic">
+                Space
+              </span>
+              <br>
+              <br>
               <img src="resources/book17(1).jpg" style="max-width: 70%; max-height: 50%;">
               <br>
               <span>
