--- a/sorter.html
+++ b/sorter.html
@@ -231,6 +231,11 @@
                 Computer Science
               </label>
               <br>
+              <input type="radio" id="Uncertainty" name="Topics" value="Uncertainty" class="in">
+              <label for="Uncertainty">
+                Uncertainty
+              </label>
+              <br>
               <input type="radio" id="Space" name="Topics" value="Space" class="in">
               <label for="Space">
                 Space
