--- a/sorter.html
+++ b/sorter.html
@@ -936,7 +936,7 @@
           </th>
         </tr>
       </table>
-      <script src="filter.js"></script>
+      <script src="filter.js defer"></script>
     </section>
     <br>
   </article>
