--- a/sorter.html
+++ b/sorter.html
@@ -928,7 +928,7 @@
                   $15.00
                 </span>
               </span>
-              <button onclick="localStorage.setItem('Gloriour', 1);alert('Added to your cart');">
+              <button onclick="localStorage.setItem('Glorious', 1);alert('Added to your cart');">
                 Add to Cart
               </button>
             </div>
