--- a/sorter.html
+++ b/sorter.html
@@ -8,8 +8,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="style.css">
-  <script src="script.js"></script>
-  <script src="sorter.js"></script>
+  <script type="text/javascript" src="script.js"></script>
 </head>
 <body>
   <header>
@@ -936,7 +935,7 @@
           </th>
         </tr>
       </table>
-      <script src="filter.js defer"></script>
+      <script type="text/javascript" src="filter.js"></script>
     </section>
     <br>
   </article>
