--- a/sorter.html
+++ b/sorter.html
@@ -336,7 +336,7 @@
     <section class="booksSect">
       <table class="booksTable">
         <tr class="booksRow">
-          <th class="Science" onclick="window.location.href='QS.html';">
+          <td class="Science" onclick="window.location.href='QS.html';">
             <div class="card">
               <span class="genre">
                 Non-Fiction
@@ -367,8 +367,8 @@
                 Add to Cart
               </button>
             </div>
-          </th>
-          <th class="Science" onclick="window.location.href='OOT.html';">
+          </td>
+          <td class="Science" onclick="window.location.href='OOT.html';">
             <div class="card">
               <span class="genre">
                 Non-Fiction
@@ -401,8 +401,8 @@
                 Add to Cart
               </button>
             </div>
-          </th>
-          <th class="Science" onclick="window.location.href='O.html';">
+          </td>
+          <td class="Science" onclick="window.location.href='O.html';">
             <div class="card">
               <span class="genre">
                 Non-Fiction
@@ -435,10 +435,10 @@
                 Add to Cart
               </button>
             </div>
-          </th>
+          </td>
         </tr>
-        <tr class="booksRow">
-          <th class="Science" onclick="window.location.href='APH.html';">
+        <td class="booksRow">
+          <td class="Science" onclick="window.location.href='APH.html';">
             <div class="card">
               <span class="genre">
                 Non-Fiction
@@ -471,8 +471,8 @@
                 Add to Cart
               </button>
             </div>
-          </th>
-          <th class="Science" onclick="window.location.href='AGL.html';">
+          </td>
+          <td class="Science" onclick="window.location.href='AGL.html';">
             <div class="card">
               <span class="genre">
                 Non-Fiction
@@ -505,8 +505,8 @@
                 Add to Cart
               </button>
             </div>
-          </th>
-          <th class="Science" onclick="window.location.href='TGD.html';">
+          </td>
+          <td class="Science" onclick="window.location.href='TGD.html';">
             <div class="card">
               <span class="genre">
                 Non-Fiction
@@ -542,9 +542,9 @@
                 Add to Cart
               </button>
             </div>
-          </th>
+          </td>
         </tr>
-        <tr class="booksRow">
+        <td class="booksRow">
           <th class="Science" onclick="window.location.href='LFA.html';">
             <div class="card">
               <span class="genre">
@@ -578,8 +578,8 @@
                 Add to Cart
               </button>
             </div>
-          </th>
-          <th class="Science" onclick="window.location.href='BABQ.html';">
+          </td>
+          <td class="Science" onclick="window.location.href='BABQ.html';">
             <div class="card">
               <span class="genre">
                 Non-Fiction
@@ -615,8 +615,8 @@
                 Add to Cart
               </button>
             </div>
-          </th>
-          <th class="Computer-Science" onclick="window.location.href='TCL.html';">
+          </td>
+          <td class="Computer-Science" onclick="window.location.href='TCL.html';">
             <div class="card">
               <span class="genre">
                 Non-Fiction
@@ -649,10 +649,10 @@
                 Add to Cart
               </button>
             </div>
-          </th>
+          </td>
         </tr>
         <tr class="booksRow">
-          <th class="Space" onclick="window.location.href='TBP.html';">
+          <td class="Space" onclick="window.location.href='TBP.html';">
             <div class="card">
               <span class="genre">
                 Fiction
@@ -685,8 +685,8 @@
                 Add to Cart
               </button>
             </div>
-          </th>
-          <th class="Space" onclick="window.location.href='SE.html';">
+          </td>
+          <td class="Space" onclick="window.location.href='SE.html';">
             <div class="card">
               <span class="genre">
                 Fiction
@@ -719,8 +719,8 @@
                 Add to Cart
               </button>
             </div>
-          </th>
-          <th class="Space" onclick="window.location.href='BL.html';">
+          </td>
+          <td class="Space" onclick="window.location.href='BL.html';">
             <div class="card">
               <span class="genre">
                 Fiction
@@ -753,7 +753,7 @@
                 Add to Cart
               </button>
             </div>
-          </th>
+          </td>
         </tr>
         <tr class="booksRow">
           <th class="ShortStories" onclick="window.location.href='HUTS.html';">
@@ -789,8 +789,8 @@
                 Add to Cart
               </button>
             </div>
-          </th>
-          <th class="ShortStories" onclick="window.location.href='TWE.html';">
+          </td>
+          <td class="ShortStories" onclick="window.location.href='TWE.html';">
             <div class="card">
               <span class="genre">
                 Fiction
@@ -823,8 +823,8 @@
                 Add to Cart
               </button>
             </div>
-          </th>
-          <th class="Space" onclick="window.location.href='ROT.html';">
+          </td>
+          <td class="Space" onclick="window.location.href='ROT.html';">
             <div class="card">
               <span class="genre">
                 Fiction
@@ -857,10 +857,10 @@
                 Add to Cart
               </button>
             </div>
-          </th>
+          </td>
         </tr>
         <tr class="booksRow">
-          <th class="Space" onclick="window.location.href='BHS.html';">
+          <td class="Space" onclick="window.location.href='BHS.html';">
             <div class="card">
               <span class="genre">
                 Fiction
@@ -897,8 +897,8 @@
                 Add to Cart
               </button>
             </div>
-          </th>
-          <th class="Space" onclick="window.location.href='G.html';">
+          </td>
+          <td class="Space" onclick="window.location.href='G.html';">
             <div class="card">
               <span class="genre">
                 Fiction
@@ -932,7 +932,7 @@
               </button>
             </div>
             
-          </th>
+          </td>
         </tr>
       </table>
       <script type="text/javascript" src="filter.js"></script>
