--- a/sorter.html
+++ b/sorter.html
@@ -189,7 +189,7 @@
   <article>
     <section>
       <form method="get">
-        <fieldset style="float:left;margin-left:5px;padding:5px 5px 5px 5px;">
+        <fieldset class="filter">
           <legend>
             <b>
               Filters
