--- a/questions.html
+++ b/questions.html
@@ -183,7 +183,12 @@
       </div>
     </nav>
     <section>
-      
+      <button class="collapsible">test</button>
+      <div class="content">
+        <p>
+          hello world
+        </p>
+      </div>
     </section>
     <footer>
       
