--- a/questions.html
+++ b/questions.html
@@ -186,7 +186,13 @@
       <button class="collapsible">test</button>
       <div class="content">
         <p>
-          hello world
+          hello worldddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddd
+        </p>
+      </div>
+      <button class="collapsible">test</button>
+      <div class="content">
+        <p>
+          hello worldddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddd
         </p>
       </div>
     </section>
