--- a/questions.html
+++ b/questions.html
@@ -183,16 +183,36 @@
       </div>
     </nav>
     <section>
-      <button class="collapsible">test</button>
+      <button class="collapsible">
+        How do I return or Exchange books?
+      </button>
       <div class="content">
         <p>
-          hello worldddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddd
+          hello world
         </p>
       </div>
-      <button class="collapsible">test</button>
+      <button class="collapsible">
+        How are your books shipped?
+      </button>
       <div class="content">
         <p>
-          hello worldddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddd
+          hello world
+        </p>
+      </div>
+      <button class="collapsible">
+        Am I able to know when my books are shipped?
+      </button>
+      <div class="content">
+        <p>
+          hello world
+        </p>
+      </div>
+      <button class="collapsible">
+        What are our policys?
+      </button>
+      <div class="content">
+        <p>
+          hello world
         </p>
       </div>
     </section>
