--- a/questions.html
+++ b/questions.html
@@ -208,7 +208,7 @@
         </p>
       </div>
       <button class="collapsible">
-        What are our policys?
+        What are our policies?
       </button>
       <div class="content">
         <p>
