--- a/APH.html
+++ b/APH.html
@@ -216,7 +216,7 @@
                 <hr>
                 <p id="bookDescription"></p>
                 <div id="payDeliver">
-                    <button onclick="localStorage.setItem('Astrophysics for people in a hurry', '1');alert('added to your cart');">
+                    <button class="checkOutBtn" onclick="localStorage.setItem('Astrophysics for people in a hurry', '1');alert('added to your cart');">
                         <b>
                           Add To Cart
                         </b>
