--- a/BABQ.html
+++ b/BABQ.html
@@ -230,7 +230,7 @@
                 <hr>
                 <p id="bookDescription"></p>
                 <div id="payDeliver">
-                    <button onclick="localStorage.setItem('Breif Answers, Big Questions', '1');alert('added to your cart');">
+                    <button class="checkOutBtn" onclick="localStorage.setItem('Breif Answers, Big Questions', '1');alert('added to your cart');">
                         <b>
                           Add To Cart
                         </b>
