--- a/BHS.html
+++ b/BHS.html
@@ -224,7 +224,7 @@
                 <hr>
                 <p id="bookDescription"></p>
                 <div id="payDeliver">
-                    <button onclick="localStorage.setItem('Bowl of Heaven & Shipstar', '1');alert('added to your cart');">
+                    <button class="checkOutBtn" onclick="localStorage.setItem('Bowl of Heaven & Shipstar', '1');alert('added to your cart');">
                         <b>
                           Add To Cart
                         </b>
