--- a/BL.html
+++ b/BL.html
@@ -225,7 +225,7 @@
                   single-minded pursuit of knowledge.
                 </p>
                 <div id="payDeliver">
-                    <button onclick="localStorage.setItem('Ball Lightning', '1');alert('added to your cart');">
+                    <button class="checkOutBtn" onclick="localStorage.setItem('Ball Lightning', '1');alert('added to your cart');">
                         <b>
                           Add To Cart
                         </b>
