--- a/OOT.html
+++ b/OOT.html
@@ -216,7 +216,7 @@
                 <hr>
                 <p id="bookDescription"></p>
                 <div id="payDeliver">
-                    <button onclick="localStorage.setItem('On The Origin Of Time', '1');alert('added to your cart')">
+                    <button class="checkOutBtn" onclick="localStorage.setItem('On The Origin Of Time', '1');alert('added to your cart')">
                         <b>
                           Add To Cart
                         </b>
