--- a/SE.html
+++ b/SE.html
@@ -230,7 +230,7 @@
                   however they want, will the children usher in an era of bright beginnings or final mistakes?
                 </p>
                 <div id="payDeliver">
-                    <button onclick="localStorage.setItem('Supernova Era', '1');alert('added to your cart');">
+                    <button class="checkOutBtn" onclick="localStorage.setItem('Supernova Era', '1');alert('added to your cart');">
                         <b>
                           Add To Cart
                         </b>
