--- a/TBP.html
+++ b/TBP.html
@@ -226,7 +226,7 @@
                   see as corrupt. Others prepare to fight the invasion at all cost.
                 </p>
                 <div id="payDeliver">
-                    <button onclick="localStorage.setItem('The Three Body Problem Trilogy', '1');alert('added to your cart');">
+                    <button class="checkOutBtn" onclick="localStorage.setItem('The Three Body Problem Trilogy', '1');alert('added to your cart');">
                         <b>
                           Add To Cart
                         </b>
