--- a/TGD.html
+++ b/TGD.html
@@ -225,7 +225,7 @@
                 <hr>
                 <p id="bookDescription"></p>
                 <div id="payDeliver">
-                    <button onclick="localStorage.setItem('The Grand Design', '1');alert('added to your cart');">
+                    <button class="checkOutBtn" onclick="localStorage.setItem('The Grand Design', '1');alert('added to your cart');">
                         <b>
                           Add To Cart
                         </b>
