--- a/Cart.html
+++ b/Cart.html
@@ -199,7 +199,7 @@
           <h4>Total</h4>
           <p class="total">$0</p>
         </div>
-        <button class="buy-btn">Check out</button>
+        <button class="buy-btn checkOutBtn">Check out</button>
       </div>
     </div>
           
@@ -208,9 +208,6 @@
       <h2 id="totals">
         
       </h2>
-      <button onclick="window.location.href='PaymentOpts.html';" id="CheckoutBtn">
-        Checkout
-      </button>
     </fieldset>
     <footer>
 
