--- a/sorter.html
+++ b/sorter.html
@@ -437,7 +437,7 @@
             </div>
           </td>
         </tr>
-        <td class="booksRow">
+        <tr class="booksRow">
           <td class="Science" onclick="window.location.href='APH.html';">
             <div class="card">
               <span class="genre">
@@ -544,7 +544,7 @@
             </div>
           </td>
         </tr>
-        <td class="booksRow">
+        <tr class="booksRow">
           <th class="Science" onclick="window.location.href='LFA.html';">
             <div class="card">
               <span class="genre">
