--- a/sorter.html
+++ b/sorter.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-
 <head>
   <title>
     SciBooks sorter
@@ -545,7 +544,7 @@
           </td>
         </tr>
         <tr class="booksRow">
-          <th class="Science" onclick="window.location.href='LFA.html';">
+          <td class="Science" onclick="window.location.href='LFA.html';">
             <div class="card">
               <span class="genre">
                 Non-Fiction
@@ -756,7 +755,7 @@
           </td>
         </tr>
         <tr class="booksRow">
-          <th class="ShortStories" onclick="window.location.href='HUTS.html';">
+          <td class="ShortStories" onclick="window.location.href='HUTS.html';">
             <div class="card">
               <span class="genre">
                 Fiction
