--- a/sorter.html
+++ b/sorter.html
@@ -7,6 +7,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <script type="text/javascript" src="script.js"></script>
 </head>
 <body>
@@ -172,7 +173,7 @@
     </div>
   </header>
   <nav class="stick">
-    <div class="menu" onclick="window.location.href='index.html';">
+    <div class="menu fa-home" onclick="window.location.href='index.html';">
       Home
     </div>
     <div class="menu">
