--- a/sorter.html
+++ b/sorter.html
@@ -173,7 +173,7 @@
     </div>
   </header>
   <nav class="stick">
-    <div class="menu fa-home" onclick="window.location.href='index.html';">
+    <div class="menu fa fa-home" onclick="window.location.href='index.html';">
       Home
     </div>
     <div class="menu">
