--- a/sorter.html
+++ b/sorter.html
@@ -507,6 +507,9 @@
             </div>
           </td>
           <td class="Science" onclick="window.location.href='TGD.html';">
+            <span class="discountRibbon">
+              Discount
+            </span>
             <div class="card">
               <span class="genre">
                 Non-Fiction
