--- a/sorter.html
+++ b/sorter.html
@@ -210,6 +210,11 @@
             Deals
           </label>
           <br>
+          <input type="checkbox" id="new" value="new" class="in">
+          <label for="new">
+            New
+          </label>
+          <br>
           <fieldset style="padding:5px 5px 5px 5px;">
             <legend>
               Topics
