--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script type="text/javascript" src="script.js"></script>
   </head>
   <body>
@@ -172,7 +173,7 @@
       </div>
     </header>
     <nav class="stick">
-      <div class="menu" onclick="window.location.href='index.html';">
+      <div class="menu fa fa-home" onclick="window.location.href='index.html';">
         Home
       </div>
       <div class="menu" onclick="window.location.href='sorter.html';">
@@ -191,64 +192,105 @@
     <table>
       <tr>
         <th onclick="window.location.href='BABQ.html';">
-          <img src="resources/book8(1).jpg" width="10%" height="auto">
-          <hr>
-          <p>
-            <span style="background-color:red;color:white;font-size:15px;border-radius:10px;padding-right:10px;padding-left:10px;">
-              25% off
-            </span>
-            <br>
-            <span style="color:rgb(86, 89, 89);text-decoration:line-through;font-size:20px;">
-              $60.00 
-            </span>
-            <span style="font-size:20px">
-               $45.00
-            </span>
-            <br>
-            <span style="font-size:15px;">
-              Brief Answers, Big Questions, Collection
-            </span>
-          </p>
+          <div class="card">
+            <img src="resources/book8(1).jpg" width="10%" height="auto">
+            <hr>
+            <p>
+              <span style="background-color:red;color:white;font-size:15px;border-radius:10px;padding-right:10px;padding-left:10px;">
+                25% off
+              </span>
+              <br>
+              <span style="color:rgb(86, 89, 89);text-decoration:line-through;font-size:20px;">
+                $60.00 
+              </span>
+              <span style="font-size:20px">
+                 $45.00
+              </span>
+              <br>
+              <span style="font-size:15px;">
+                Brief Answers, Big Questions, Collection
+              </span>
+            </p>
+          </div>
         </th>
         <th onclick="window.location.href='TGD.html';">
-          <img src="resources/book6(1).jpg" width="10%" height="auto">
-          <hr>
-          <p>
-            <span style="background-color:red;color:white;font-size:15px;border-radius:10px;padding-right:10px;padding-left:10px;">
-              50% off
-            </span>
-            <br>
-            <span style="color:rgb(86, 89, 89);text-decoration:line-through;font-size:20px;">
-              $18.00 
-            </span>
-            <span style="font-size:20px">
-               $9.00
-            </span>
-            <br>
-            <span style="font-size:15px;">
-              The Grand Design
-            </span>
-          </p>
+          <div class="card">
+            <img src="resources/book6(1).jpg" width="10%" height="auto">
+            <hr>
+            <p>
+              <span style="background-color:red;color:white;font-size:15px;border-radius:10px;padding-right:10px;padding-left:10px;">
+                50% off
+              </span>
+              <br>
+              <span style="color:rgb(86, 89, 89);text-decoration:line-through;font-size:20px;">
+                $18.00 
+              </span>
+              <span style="font-size:20px">
+                 $9.00
+              </span>
+              <br>
+              <span style="font-size:15px;">
+                The Grand Design
+              </span>
+            </p>
+          </div>
         </th>
         <th onclick="window.location.href='BHS.html';">
-          <img src="resources/book16(1).jpg" width="10%" height="auto">
-          <hr>
-          <p>
-            <span style="background-color:red;color:white;font-size:15px;border-radius:10px;padding-right:10px;padding-left:10px;">
-              50% off
-            </span>
-            <br>
-            <span style="color:rgb(86, 89, 89);text-decoration:line-through;font-size:20px;">
-              $30.00
-            </span>
-            <span style="font-size:20px;">
-              $15.00
-            </span>
-            <br>
-            <span style="font-size:15px;">
-              Bowl of Heaven & Shipstar
-            </span>
-          </p>
+          <div class="card">
+            <img src="resources/book16(1).jpg" width="10%" height="auto">
+            <hr>
+            <p>
+              <span style="background-color:red;color:white;font-size:15px;border-radius:10px;padding-right:10px;padding-left:10px;">
+                50% off
+              </span>
+              <br>
+              <span style="color:rgb(86, 89, 89);text-decoration:line-through;font-size:20px;">
+                $30.00
+              </span>
+              <span style="font-size:20px;">
+                $15.00
+              </span>
+              <br>
+              <span style="font-size:15px;">
+                Bowl of Heaven & Shipstar
+              </span>
+            </p>
+          </div>
+        </th>
+      </tr>
+    </table>
+    <br>
+    <h2>
+      <span style="color:red;text-decoration:underline;">
+        New:
+      </span>
+    </h2>
+    <table>
+      <tr>
+        <th onclick="window.location.href='HUTS.html';">
+          <div class="card">
+            <img src="resources/book13(1).jpg" width="10%" height="auto">
+            <hr>
+            <p>
+              <span style="font-size:20px;">
+                $20.00
+              </span>
+              <br>
+              <span style="font-size:15px;">
+                To Hold Up The Sky
+              </span>
+            </p>
+          </div>
+        </th>
+        <th onclick="">
+          <div class="card">
+            
+          </div>
+        </th>
+        <th onclick="">
+          <div class="card">
+            
+          </div>
         </th>
       </tr>
     </table>
