--- a/sorter.html
+++ b/sorter.html
@@ -176,7 +176,7 @@
     <div class="menu fa fa-home" onclick="window.location.href='index.html';">
       Home
     </div>
-    <div class="menu fa fa-magnifying-glass">
+    <div class="menu fa fa-search">
       Lookup
     </div>
     <div class="menu" onclick="window.location.href='Cart.html';">
