--- a/sorter.html
+++ b/sorter.html
@@ -179,7 +179,7 @@
     <div class="menu fa fa-search">
       Lookup
     </div>
-    <div class="menu" onclick="window.location.href='Cart.html';">
+    <div class="menu fa fa-shopping-cart" onclick="window.location.href='Cart.html';">
       Cart
     </div>
   </nav>
