--- a/BL.html
+++ b/BL.html
@@ -7,6 +7,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
     <body>
         <header>
@@ -171,13 +172,13 @@
           </div>
         </header>
         <nav class="stick">
-          <div class="menu" onclick="window.location.href='index.html';">
+          <div class="menu fa fa-home" onclick="window.location.href='index.html';">
             Home
           </div>
-          <div class="menu" onclick="window.location.href='sorter.html';">
+          <div class="menu fa fa-search" onclick="window.location.href='sorter.html';">
             Lookup
           </div>
-          <div class="menu" onclick="window.location.href='Cart.html';">
+          <div class="menu fa fa-shopping-cart" onclick="window.location.href='Cart.html';">
             Cart
           </div>
         </nav>
