--- a/index.html
+++ b/index.html
@@ -176,10 +176,10 @@
       <div class="menu fa fa-home" onclick="window.location.href='index.html';">
         Home
       </div>
-      <div class="menu" onclick="window.location.href='sorter.html';">
+      <div class="menu fa fa-search" onclick="window.location.href='sorter.html';">
         Lookup
       </div>
-      <div class="menu" onclick="window.location.href='Cart.html';">
+      <div class="menu fa fa-shopping-cart" onclick="window.location.href='Cart.html';">
         Cart
       </div>
     </nav>
