--- a/security.html
+++ b/security.html
@@ -7,6 +7,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <script src="script.js" defer></script>
     </head>
     <body>
@@ -172,13 +173,13 @@
           </div>
         </header>
         <nav class="stick">
-          <div class="menu" onclick="window.location.href='index.html';">
+          <div class="menu fa fa-home" onclick="window.location.href='index.html';">
             Home
           </div>
-          <div class="menu" style="font-size: xx-large;">
+          <div class="menu fa fa-search" style="font-size: xx-large;">
             Lookup
           </div>
-          <div class="menu" onclick="window.location.href='Cart.html';">
+          <div class="menu fa fa-shopping-cart" onclick="window.location.href='Cart.html';">
             Cart
           </div>
         </nav>
