--- a/HUTS.html
+++ b/HUTS.html
@@ -186,16 +186,16 @@
         <br>
         <div class="row">
           <div class="column">
-            <img src="resources/book13(1).jpg" style="width:auto;height:15%;" onclick="inlarge(this);">
+            <img src="resources/book13(1).jpg" width="auto" height="25%" onclick="inlarge(this);">
           </div>
           <div class="column">
-            <img src="resources/book13(2).jpg" style="width:auto;height:15%;" onclick="inlarge(this);">
+            <img src="resources/book13(2).jpg" width="auto" height="25%" onclick="inlarge(this);">
           </div>
           <div class="column">
-            <img src="resources/book13(3).jpg" style="width:auto;height:15%;" onclick="inlarge(this);">
+            <img src="resources/book13(3).jpg" width="auto" height="25%" onclick="inlarge(this);">
           </div>
           <div class="column">
-            <img src="resources/book13(4).jpg" style="width:auto;height:15%;" onclick="inlarge(this);">
+            <img src="resources/book13(4).jpg" width="auto" height="25%" onclick="inlarge(this);">
           </div>
         </div>
         
