--- a/sorter.html
+++ b/sorter.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <script type="text/javascript" src="script.js"></script>
+  <script type="text/javascript" src="filter.js"></script>
 </head>
 <body>
   <header>
@@ -341,7 +342,7 @@
     <section class="booksSect">
       <table class="booksTable">
         <tr class="booksRow">
-          <td class="Science" onclick="window.location.href='QS.html';">
+          <td class="book Science" onclick="window.location.href='QS.html';">
             <div class="card">
               <span class="genre">
                 Non-Fiction
@@ -373,7 +374,7 @@
               </button>
             </div>
           </td>
-          <td class="Science" onclick="window.location.href='OOT.html';">
+          <td class="book Science" onclick="window.location.href='OOT.html';">
             <div class="card">
               <span class="genre">
                 Non-Fiction
@@ -407,7 +408,7 @@
               </button>
             </div>
           </td>
-          <td class="Science" onclick="window.location.href='O.html';">
+          <td class="book Science" onclick="window.location.href='O.html';">
             <div class="card">
               <span class="genre">
                 Non-Fiction
@@ -443,7 +444,7 @@
           </td>
         </tr>
         <tr class="booksRow">
-          <td class="Science" onclick="window.location.href='APH.html';">
+          <td class="book Science" onclick="window.location.href='APH.html';">
             <div class="card">
               <span class="genre">
                 Non-Fiction
@@ -477,13 +478,13 @@
               </button>
             </div>
           </td>
-          <td class="Science" onclick="window.location.href='AGL.html';">
+          <td class="book Space" onclick="window.location.href='AGL.html';">
             <div class="card">
               <span class="genre">
                 Non-Fiction
               </span>
               <span class="topic">
-                Science
+                Space
               </span>
               <br>
               <br>
@@ -511,7 +512,7 @@
               </button>
             </div>
           </td>
-          <td class="Science" onclick="window.location.href='TGD.html';">
+          <td class="book Science" onclick="window.location.href='TGD.html';">
             <div class="card">
               <span class="genre">
                 Non-Fiction
@@ -550,7 +551,7 @@
           </td>
         </tr>
         <tr class="booksRow">
-          <td class="Science" onclick="window.location.href='LFA.html';">
+          <td class="book Science" onclick="window.location.href='LFA.html';">
             <div class="card">
               <span class="genre">
                 Non-Fiction
@@ -584,7 +585,7 @@
               </button>
             </div>
           </td>
-          <td class="Science" onclick="window.location.href='BABQ.html';">
+          <td class="book Science" onclick="window.location.href='BABQ.html';">
             <div class="card">
               <span class="genre">
                 Non-Fiction
@@ -621,7 +622,7 @@
               </button>
             </div>
           </td>
-          <td class="Computer-Science" onclick="window.location.href='TCL.html';">
+          <td class="book Computer-Science" onclick="window.location.href='TCL.html';">
             <div class="card">
               <span class="genre">
                 Non-Fiction
@@ -657,7 +658,7 @@
           </td>
         </tr>
         <tr class="booksRow">
-          <td class="Space" onclick="window.location.href='TBP.html';">
+          <td class="book Uncertainty" onclick="window.location.href='TBP.html';">
             <div class="card">
               <span class="genre">
                 Fiction
@@ -691,13 +692,13 @@
               </button>
             </div>
           </td>
-          <td class="Space" onclick="window.location.href='SE.html';">
+          <td class="book Uncertainty" onclick="window.location.href='SE.html';">
             <div class="card">
               <span class="genre">
                 Fiction
               </span>
               <span class="topic">
-                Space
+                Uncertainty
               </span>
               <br>
               <br>
@@ -725,7 +726,7 @@
               </button>
             </div>
           </td>
-          <td class="Space" onclick="window.location.href='BL.html';">
+          <td class="book Uncertainty" onclick="window.location.href='BL.html';">
             <div class="card">
               <span class="genre">
                 Fiction
@@ -761,7 +762,7 @@
           </td>
         </tr>
         <tr class="booksRow">
-          <td class="ShortStories" onclick="window.location.href='HUTS.html';">
+          <td class="book ShortStories" onclick="window.location.href='HUTS.html';">
             <div class="card">
               <span class="genre">
                 Fiction
@@ -795,7 +796,7 @@
               </button>
             </div>
           </td>
-          <td class="ShortStories" onclick="window.location.href='TWE.html';">
+          <td class="book ShortStories" onclick="window.location.href='TWE.html';">
             <div class="card">
               <span class="genre">
                 Fiction
@@ -829,7 +830,7 @@
               </button>
             </div>
           </td>
-          <td class="Space" onclick="window.location.href='ROT.html';">
+          <td class="book Uncertainty" onclick="window.location.href='ROT.html';">
             <div class="card">
               <span class="genre">
                 Fiction
@@ -865,7 +866,7 @@
           </td>
         </tr>
         <tr class="booksRow">
-          <td class="Space" onclick="window.location.href='BHS.html';">
+          <td class="book Space" onclick="window.location.href='BHS.html';">
             <div class="card">
               <span class="genre">
                 Fiction
@@ -903,7 +904,7 @@
               </button>
             </div>
           </td>
-          <td class="Space" onclick="window.location.href='G.html';">
+          <td class="book Space" onclick="window.location.href='G.html';">
             <div class="card">
               <span class="genre">
                 Fiction
@@ -940,7 +941,6 @@
           </td>
         </tr>
       </table>
-      <script type="text/javascript" src="filter.js"></script>
     </section>
     <br>
   </article>
